Fix swagger issue with token being send in a wrong header
